--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,14 @@ dist.jar=${dist.dir}/BonitoPrint.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\vinicius\\Downloads\\jcalendar-1.3.3.jar
+file.reference.ojdbc6.jar=C:\\Users\\elisson\\Documents\\4\u00baPeriodo\\BD1\\ojdbc6.jar
 file.reference.ojdbc7.jar=C:\\Users\\vinicius\\Downloads\\ojdbc7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.3.3.jar}:\
-    ${file.reference.ojdbc7.jar}
+    ${file.reference.ojdbc7.jar}:\
+    ${file.reference.ojdbc6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
